--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ tokio = { version = "1.47", features = ["full"] }
 quinn = "0.11"
 rustls = { version = "0.23", default-features = false }
 rcgen = "0.14"
-
+bytes = "1.10"
+dashmap = "6.1"
+uuid = { version = "1.18", features = ["v4"] }
 anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+async-trait = "0.1"
