--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ tracing-subscriber = "0.3"
 async-trait = "0.1"
 thiserror = "2.0"
 itertools = "0.14"
+clap = { version = "4.5", features = ["derive"] }
+hdrhistogram = "7.5"
+rand = "0.9"
 
 [profile.dev]
 opt-level = 0 # 编译快，调试方便
