--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ itertools = "0.14"
 clap = { version = "4.5", features = ["derive"] }
 hdrhistogram = "7.5"
 rand = "0.9"
+crc32fast = "1.4"
 
 [profile.dev]
 opt-level = 0 # 编译快，调试方便
