--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "rex_mq"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+skip_crc = []
+
 [dependencies]
 tokio = { version = "1.48", features = ["full"] }
 quinn = "0.11"
@@ -27,6 +31,13 @@ strum = "0.27"
 strum_macros = "0.27"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.9"
+
+[dev-dependencies]
+criterion = { version = "0.7", features = ["async_tokio", "html_reports"] }
+
+[[bench]]
+name = "data_codec"
+harness = false
 
 [profile.dev]
 opt-level = 0 # 编译快，调试方便
