--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2024"
 default = []
 skip_crc = []
 
+[lints.clippy]
+unwrap_used = "deny"
+expect_used = "deny"
+panic = "deny"
+
 [dependencies]
 tokio = { version = "1.48", features = ["full"] }
 quinn = "0.11"
