--- a/bindings/rex4j/pom.xml
+++ b/bindings/rex4j/pom.xml
@@ -63,7 +63,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.example.Launcher</mainClass> <!-- 指定主类 -->
+                                    <mainClass>com.rex4j.example.RexEngine</mainClass> <!-- 指定主类 -->
                                 </transformer>
                             </transformers>
                         </configuration>
