--- a/bindings/rex4j/Cargo.toml
+++ b/bindings/rex4j/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rex4j"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 
 [lib]
 name = "rex4j"
