--- a/bindings/rex4p/Cargo.toml
+++ b/bindings/rex4p/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "rex4p"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 
 [lib]
 name = "rex4p"
 crate-type = ["cdylib"]
+
+[lints]
+workspace = true
 
 [dependencies]
 rex-core = { path = "../../crates/rex-core" }
