--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ rustls = { version = "0.23", default-features = false }
 rcgen = "0.14"
 bytes = "1.11"
 dashmap = "6.1"
+ahash = "0.8"
 uuid = { version = "1.18", features = ["v4"] }
 anyhow = "1.0"
 tracing = "0.1"
@@ -42,6 +43,7 @@ strum = "0.27"
 strum_macros = "0.27"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.9"
+parking_lot = "0.12"
 
 [profile.dev]
 opt-level = 0
