--- a/crates/rex-client/Cargo.toml
+++ b/crates/rex-client/Cargo.toml
@@ -19,3 +19,4 @@ futures-util.workspace = true
 tokio-tungstenite.workspace = true
 dashmap.workspace = true
 itertools.workspace = true
+parking_lot.workspace = true
