--- a/bindings/rex4p/Cargo.toml
+++ b/bindings/rex4p/Cargo.toml
@@ -13,4 +13,9 @@ workspace = true
 [dependencies]
 rex-core = { path = "../../crates/rex-core" }
 rex-client = { path = "../../crates/rex-client" }
-pyo3 = { version = "0.27", features = ["abi3-py39", "abi3"] }
+pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
+pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
+tokio.workspace = true
+anyhow.workspace = true
+bytes.workspace = true
+async-trait.workspace = true
