--- a/bindings/rex4p/Cargo.toml
+++ b/bindings/rex4p/Cargo.toml
@@ -10,12 +10,27 @@ crate-type = ["cdylib"]
 [lints]
 workspace = true
 
+
+[features]
+default = ["sync"]
+
+sync = []
+
+async = ["dep:pyo3-async-runtimes"]
+
+
 [dependencies]
 rex-core = { path = "../../crates/rex-core" }
 rex-client = { path = "../../crates/rex-client" }
+
 pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
-pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
+
+pyo3-async-runtimes = { version = "0.27", features = [
+    "tokio-runtime",
+], optional = true }
+
 tokio.workspace = true
 anyhow.workspace = true
 bytes.workspace = true
 async-trait.workspace = true
+kanal.workspace = true
