--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,39 +13,79 @@ resolver = "2"
 version = "0.1.0"
 edition = "2024"
 
+# =====================
+# Workspace Lints
+# =====================
 [workspace.lints.clippy]
 unwrap_used = "deny"
 expect_used = "deny"
 panic = "deny"
 
+# =====================
+# Workspace Dependencies
+# （按功能分组，便于维护）
+# =====================
 [workspace.dependencies]
-tokio = { version = "1.48", features = ["full"] }
+# --- Async Runtime & Concurrency ---
+tokio = { version = "1.48", features = [
+  "rt-multi-thread",
+  "macros",
+  "net",
+  "time",
+] }
+futures-util = "0.3"
+async-trait = "0.1"
+kanal = "0.1"
+parking_lot = "0.12"
+
+# --- Networking & Transport ---
 quinn = "0.11"
 rustls = { version = "0.23", default-features = false }
 rcgen = "0.14"
+tokio-tungstenite = "0.28"
+
+# --- Data Structures & Performance ---
 bytes = "1.11"
 dashmap = "6.1"
 ahash = "0.8"
-uuid = { version = "1.18", features = ["v4"] }
+hdrhistogram = "7.5"
+crc32fast = "1.5"
+
+# --- IDs, Randomness ---
+uuid = { version = "1.19", features = ["v4"] }
+rand = "0.9"
+
+# --- Error Handling & Utilities ---
 anyhow = "1.0"
-tracing = "0.1"
-tracing-subscriber = "0.3"
-async-trait = "0.1"
 thiserror = "2.0"
 itertools = "0.14"
+
+# --- Logging & Observability ---
+tracing = "0.1"
+tracing-subscriber = "0.3"
+
+# --- CLI & Config ---
 clap = { version = "4.5", features = ["derive"] }
-hdrhistogram = "7.5"
-rand = "0.9"
-crc32fast = "1.5"
-tokio-tungstenite = "0.28"
-futures-util = "0.3"
-strum = "0.27"
-strum_macros = "0.27"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.9"
-parking_lot = "0.12"
-kanal = "0.1"
 
+# --- Enum Utilities ---
+strum = "0.27"
+strum_macros = "0.27"
+
+# --- Benchmarking & Testing ---
+criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }
+
+# --- Language Bindings ---
+# Java
+jni = "0.21"
+# Python
+pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
+pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
+
+# =====================
+# Build Profiles
+# =====================
 [profile.dev]
 opt-level = 0
 debug = true
