--- a/bindings/rex4j/Cargo.toml
+++ b/bindings/rex4j/Cargo.toml
@@ -18,4 +18,4 @@ tracing.workspace = true
 async-trait.workspace = true
 tokio.workspace = true
 bytes.workspace = true
-jni = "0.21"
+jni.workspace = true
