--- a/crates/rex-server/Cargo.toml
+++ b/crates/rex-server/Cargo.toml
@@ -7,8 +7,8 @@ edition.workspace = true
 workspace = true
 
 [dependencies]
-rex-core = { path = "../rex-core" }
-rex-client = { path = "../rex-client" }
+rex-core.workspace = true
+rex-client.workspace = true
 anyhow.workspace = true
 tracing.workspace = true
 serde.workspace = true
@@ -23,3 +23,4 @@ rustls.workspace = true
 futures-util.workspace = true
 tokio-tungstenite.workspace = true
 rcgen.workspace = true
+ahash.workspace = true
