--- a/crates/rex-cli/Cargo.toml
+++ b/crates/rex-cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rex-test"
+name = "rex-cli"
 version.workspace = true
 edition.workspace = true
 
@@ -20,10 +20,4 @@ crc32fast.workspace = true
 bytes.workspace = true
 clap.workspace = true
 rand.workspace = true
-
-[dev-dependencies]
-criterion.workspace = true
-
-[[bench]]
-name = "data_codec"
-harness = false
+hdrhistogram.workspace = true
