--- a/crates/rex-sender/Cargo.toml
+++ b/crates/rex-sender/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rex-client"
+name = "rex-sender"
 version.workspace = true
 edition.workspace = true
 
@@ -8,14 +8,10 @@ workspace = true
 
 [dependencies]
 rex-core.workspace = true
-rex-sender.workspace = true
 anyhow.workspace = true
-bytes.workspace = true
-quinn.workspace = true
-rustls.workspace = true
-tokio.workspace = true
-tracing.workspace = true
 async-trait.workspace = true
+bytes.workspace = true
+tokio.workspace = true
 futures-util.workspace = true
 tokio-tungstenite.workspace = true
-dashmap.workspace = true
+quinn.workspace = true
