--- a/crates/rex-server/Cargo.toml
+++ b/crates/rex-server/Cargo.toml
@@ -8,7 +8,7 @@ workspace = true
 
 [dependencies]
 rex-core.workspace = true
-rex-client.workspace = true
+rex-sender.workspace = true
 anyhow.workspace = true
 tracing.workspace = true
 serde.workspace = true
