--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ panic = "deny"
 # （按功能分组，便于维护）
 # =====================
 [workspace.dependencies]
-rex-core = { path = "crates/rex-core", features = ["skip_crc"] }
+rex-core = { path = "crates/rex-core" }
 rex-sender = { path = "crates/rex-sender" }
 rex-client = { path = "crates/rex-client" }
 rex-server = { path = "crates/rex-server" }
@@ -57,6 +57,7 @@ dashmap = "6.1"
 ahash = "0.8"
 hdrhistogram = "7.5"
 crc32fast = "1.5"
+rkyv = "0.8"
 
 # --- IDs, Randomness ---
 uuid = { version = "1.19", features = ["v4"] }
