--- a/crates/rex-server/Cargo.toml
+++ b/crates/rex-server/Cargo.toml
@@ -24,3 +24,4 @@ futures-util.workspace = true
 tokio-tungstenite.workspace = true
 rcgen.workspace = true
 ahash.workspace = true
+rkyv.workspace = true
