--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,18 +19,17 @@ repos:
   # -------------------------
   # Python 格式化
   # -------------------------
-  - repo: https://github.com/google/yapf
-    rev: v0.43.0
+  - repo: https://github.com/psf/black
+    rev: 25.12.0
     hooks:
-      - id: yapf
-        name: Python YAPF formatter
-        args: ["--style", "google"]
+      - id: black
+        language_version: python3.10
 
-  - repo: https://github.com/PyCQA/isort
-    rev: 7.0.0
+  - repo: https://github.com/pycqa/flake8
+    rev: 7.3.0
     hooks:
-      - id: isort
-        name: Python import sorter
+      - id: flake8
+        args: ["--max-line-length", "120"]
 
   # -------------------------
   # Java 格式化
