--- a/bindings/rex4j/Cargo.toml
+++ b/bindings/rex4j/Cargo.toml
@@ -11,12 +11,12 @@ crate-type = ["cdylib"]
 workspace = true
 
 [dependencies]
-rex-core = { path = "../../crates/rex-core" }
-rex-client = { path = "../../crates/rex-client" }
+rex-core.workspace = true
+rex-client.workspace = true
 anyhow.workspace = true
 tracing.workspace = true
 async-trait.workspace = true
 tokio.workspace = true
-bytes.workspace = true
 jni.workspace = true
 rkyv.workspace = true
+kanal.workspace = true
