--- a/crates/rex-server/Cargo.toml
+++ b/crates/rex-server/Cargo.toml
@@ -9,6 +9,7 @@ workspace = true
 [dependencies]
 rex-core.workspace = true
 rex-sender.workspace = true
+rex-persistence.workspace = true
 anyhow.workspace = true
 tracing.workspace = true
 serde.workspace = true
