--- a/crates/rex-test/Cargo.toml
+++ b/crates/rex-test/Cargo.toml
@@ -10,6 +10,7 @@ workspace = true
 rex-core.workspace = true
 rex-client.workspace = true
 rex-server.workspace = true
+rex-persistence.workspace = true
 anyhow.workspace = true
 tokio.workspace = true
 tracing.workspace = true
@@ -17,11 +18,11 @@ tracing-subscriber.workspace = true
 async-trait.workspace = true
 strum.workspace = true
 bytes.workspace = true
-clap.workspace = true
 rand.workspace = true
 
 [dev-dependencies]
 criterion.workspace = true
+serial_test.workspace = true
 
 [[bench]]
 name = "data_codec"
