--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ bincode = "1.3.3"
 # --- IDs, Randomness ---
 uuid = { version = "1.20.0", features = ["v4"] }
 rand = "0.10.0"
+fastrand = "2.0"
 
 # --- Error Handling & Utilities ---
 anyhow = "1.0.101"
