--- a/crates/rex-client/Cargo.toml
+++ b/crates/rex-client/Cargo.toml
@@ -18,3 +18,6 @@ tracing.workspace = true
 async-trait.workspace = true
 futures-util.workspace = true
 tokio-tungstenite.workspace = true
+dashmap.workspace = true
+ahash.workspace = true
+fastrand.workspace = true
