--- a/crates/rex-sender/Cargo.toml
+++ b/crates/rex-sender/Cargo.toml
@@ -15,3 +15,4 @@ tokio.workspace = true
 futures-util.workspace = true
 tokio-tungstenite.workspace = true
 quinn.workspace = true
+tracing.workspace = true
